<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.card.CardFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"

        android:layout_height="50dp"

        android:background="#F4F4F4"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:layout_marginStart="15dp"

            android:text="@string/card"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:fontFamily="@font/cormorant_garamond_semibold"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="26dp"
        android:src="@drawable/ic_cart_empty"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginHorizontal="44dp"

        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/cart_empty"
        android:textColor="@color/grey"

        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="56dp"

        android:background="@color/splash"
        android:text="@string/toOrder"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>