<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            android:visibility="visible"/>

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="375dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"

            android:textSize="24dp"
            android:text=""
            android:textColor="#32302F"
            android:fontFamily="@font/cormorant_garamond_regular"

            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <TextView
            android:id="@+id/tvPriceNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"

            android:text=""

            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat_semibold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/montserrat_medium"

            android:text=""
            android:textColor="#A1948C"
            android:textSize="16dp"

            app:layout_constraintBottom_toBottomOf="@+id/tvPriceNew"
            app:layout_constraintStart_toEndOf="@+id/tvPriceNew"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/textViewChooseColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="16dp"

            android:textSize="16dp"
            android:fontFamily="@font/montserrat_regular"

            android:text="@string/color"
            android:textColor="#32302F"



            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPriceNew" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupChooseColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"

            app:layout_constraintTop_toBottomOf="@id/textViewChooseColor">
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"

            android:text="@string/size"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="16dp"

            app:layout_constraintTop_toBottomOf="@id/chipGroupChooseColor"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewTableSize"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"

            android:text="@string/table_size"
            android:textSize="16dp"
            android:drawableStart="@drawable/ic_lineika"
            android:textColor="#706864"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupChooseSize" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupChooseSize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/textViewSize">
        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddToCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewTableSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_margin="16dp"
            android:background="#32302F"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"


            android:text="@string/add_to_card"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonAddToCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"

            android:textSize="18dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:id="@+id/textViewDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"

            tools:text=""
            android:textColor="@color/black"/>



        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"

            android:background="@drawable/back_button"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:src="@drawable/ic_favorite_empty"

            app:layout_constraintBottom_toBottomOf="@+id/buttonBack"

            android:layout_marginEnd="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonBack" />

        <TextView
            android:id="@+id/tvMbLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"

            android:text="@string/mbLike"
            android:textSize="18dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLabelNew"
            android:layout_width="56dp"
            android:layout_height="25dp"

            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"

            android:background="#CDCFD6"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="NEW"
            android:textSize="12dp"
            android:visibility="gone"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imageView"/>

        <TextView
            android:id="@+id/textViewLabelSale"
            android:layout_width="69dp"
            android:layout_height="25dp"

            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"

            android:background="#CDCFD6"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sale"
            android:textSize="12dp"

            android:visibility="gone"

            app:layout_constraintStart_toEndOf="@+id/textViewLabelNew"
            app:layout_constraintBottom_toBottomOf="@id/imageView"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="60dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMbLike"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>