<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        android:text="@string/app_name"
        android:textSize="36dp"
        android:gravity="center"
        android:fontFamily="@font/futura_medium"
        android:textColor="@color/grey" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="17dp"

        android:background="@drawable/seach_view_background"
        android:queryHint="search"

        android:iconifiedByDefault="false"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLogo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFirst"
                android:layout_width="match_parent"
                android:layout_height="110dp"

                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewCategory"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:src="@drawable/jesus" />

                    <TextView
                        android:id="@+id/textViewCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/category"
                        android:layout_marginStart="2dp"

                        android:textColor="@color/black"
                        android:textSize="26dp"
                        android:fontFamily="@font/pt_root_bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSecond"
                android:layout_width="match_parent"
                android:layout_height="110dp"

                android:visibility="gone"

                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewFirst"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:src="@drawable/jesus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/category"
                        android:layout_marginStart="2dp"

                        android:textColor="@color/black"
                        android:textSize="26dp"
                        android:fontFamily="@font/pt_root_bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="44dp"
                android:layout_marginStart="16dp"

                android:fontFamily="@font/cormorant_garamond_semibold"
                android:text="@string/new_clothes"
                android:textColor="@color/grey"

                android:textSize="20dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewSecond" />


            <cz.intik.overflowindicator.OverflowPagerIndicator
                android:id="@+id/viewOverflowPagerIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:indicatorFillColor="@color/grey"
                app:indicatorStrokeColor="@color/black"
                app:indicatorSize="8dp"

                android:layout_marginEnd="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewNew"
                app:layout_constraintBottom_toBottomOf="@id/textViewNew"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewNewCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewNew" />

            <TextView
                android:id="@+id/textViewSales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"

                android:fontFamily="@font/cormorant_garamond_semibold"
                android:text="@string/sales"
                android:textColor="@color/grey"


                android:textSize="20dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewNewCollection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSales" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                app:layout_constraintTop_toBottomOf="@id/recyclerViewSales"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/fr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:layout_marginTop="45dp"
                    android:layout_marginStart="16dp">

<!--                    <LinearLayout-->
<!--                        android:id="@+id/container"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:orientation="horizontal"-->
<!--                        android:layout_marginBottom="16dp">-->

<!--                        <TextView-->
<!--                            android:id="@+id/tvSlug"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->

<!--                            android:layout_gravity="start"-->

<!--                            android:textSize="20dp"-->
<!--                            android:fontFamily="@font/cormorant_garamond_semibold"-->
<!--                            android:textColor="@color/grey"/>-->

<!--                        <TextView-->
<!--                            android:id="@+id/tvAll"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:text="@string/all"-->

<!--                            android:layout_weight="5"-->
<!--                            android:gravity="end|center"-->
<!--                            android:layout_marginEnd="16dp"-->

<!--                            android:textSize="16dp"-->
<!--                            android:fontFamily="@font/montserrat_medium"-->
<!--                            android:textColor="#32302F"/>-->
<!--                    </LinearLayout>-->

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@id/ll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
